--- a/styles.css
+++ b/styles.css
@@ -34,3 +34,19 @@ details {
   border-width: .5px;
   border-color: #333;
 }
+
+.vid_container {
+    position: relative;
+    margin: auto;
+    width: 90%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+
+.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
